--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "ng-bootstrap-form-validation": "^5.0.0",
     "ngx-permissions": "^7.0.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
