--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular2-ladda": "^2.0.2",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ng-bootstrap-form-validation": "^5.0.0",
+    "ngx-bootstrap": "^5.3.2",
     "ngx-permissions": "^7.0.3",
+    "ngx-toastr": "^11.3.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
